--- a/index.html
+++ b/index.html
@@ -45,5 +45,21 @@
         <li>Sue Smith: <i>Effervescent</i> is a word that decribes her.</li>
         <li>Bill Thompson: Loves playing <i>Yu-Gi-Oh.</i></li>
     </ul>
+    <div class="certi">
+        <p>
+            <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                <img style="border:0;width:88px;height:31px"
+                src="http://jigsaw.w3.org/css-validator/images/vcss"
+                alt="Valid CSS!" />
+            </a>
+        </p>
+        <p>
+            <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                <img style="border:0;width:88px;height:31px"
+                src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+                alt="Valid CSS!" />
+            </a>
+        </p>
+    </div>
 </body>
 </html>
