--- a/index.html
+++ b/index.html
@@ -46,17 +46,13 @@
         <li>Bill Thompson: Loves playing <i>Yu-Gi-Oh.</i></li>
     </ul>
     <div class="certi">
+        <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fdung977.github.io%2Flab2%2F">
+            <img src="valid-xhtml11.png" alt="Valid HTML!"  style="border:0;width:88px;height:31px"/>
+        </a>
         <p>
             <a href="http://jigsaw.w3.org/css-validator/check/referer">
                 <img style="border:0;width:88px;height:31px"
                 src="http://jigsaw.w3.org/css-validator/images/vcss"
-                alt="Valid CSS!" />
-            </a>
-        </p>
-        <p>
-            <a href="http://jigsaw.w3.org/css-validator/check/referer">
-                <img style="border:0;width:88px;height:31px"
-                src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
                 alt="Valid CSS!" />
             </a>
         </p>
