--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         <li>Bill Thompson: Loves playing <i>Yu-Gi-Oh.</i></li>
     </ul>
     <div class="certi">
-        <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fdung977.github.io%2Flab2%2F">
-            <img src="valid-xhtml11.png" alt="Valid HTML!"  style="border:0;width:88px;height:31px"/>
+        <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fdung977.github.io%2Flab2%2F" target="_blank">
+            <img src="valid-xhtml11.png" alt="Valid HTML!"  style="border:0;width:88px;height:31px" />
         </a>
         <p>
             <a href="http://jigsaw.w3.org/css-validator/check/referer">
